# observarium

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  ENHANCEMENTS.md  IMPLEMENTATION_STEPS.md  Makefile  README.md  run.py
client/: .env.development  .prettierrc  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.mjs
client/public/: manifest.webmanifest
client/scripts/: render_moon.mjs
client/src/: App.svelte  main.js  styles.css
client/src/components/: AboutPanel.svelte  ConfirmDialog.svelte  CustomCheckbox.svelte  CustomInput.svelte  CustomSelect.svelte  CustomTextarea.svelte  DataSyncPanel.svelte  DateTimePicker.svelte  FinderPanel.svelte  LoginForm.svelte  LoupePanel.svelte  MenuPanel.svelte  MoonCanvas.svelte  MoonDisambiguationOverlay.svelte  MoonMapHeader.svelte  MultiplierSelect.svelte  ObjectListMembershipOverlay.svelte  ObservationFormPanel.svelte  ObservationObjectSymbol.svelte  ObservedListRemovalOverlay.svelte  OnScreenKeyboard.svelte  QuizProgress.svelte  QuizSetup.svelte  SearchPanel.svelte  SkyCanvas.svelte  SyncObservationsPanel.svelte  TelescopeUsageEditor.svelte  TopBar.svelte
client/src/icons/: AcceptIcon.svelte  AppIcon.svelte  BackIcon.svelte  CloseIcon.svelte  ConstellationBoundsIcon.svelte  ConstellationLinesIcon.svelte  ConstellationNamesIcon.svelte  ConstellationQuizIcon.svelte  DeleteIcon.svelte  DraftIcon.svelte  DsoIcon.svelte  DsoQuizIcon.svelte  EditIcon.svelte  FinderQuizIcon.svelte  FinderViewIcon.svelte  FindingPathsIcon.svelte  FovCircleIcon.svelte  HamburgerIcon.svelte  HorizonIcon.svelte  InfoIcon.svelte  ListIcon.svelte  MaxHeightIcon.svelte  MoonMapIcon.svelte  MoonQuizIcon.svelte  MoveDownIcon.svelte  MoveUpIcon.svelte  NightModeIcon.svelte  ObservationsIcon.svelte  ObservedIcon.svelte  PhaseToggleIcon.svelte  PlanetQuizIcon.svelte  PlusIcon.svelte  RangeIcon.svelte  RefreshIcon.svelte  RiseIcon.svelte  SearchIcon.svelte  SetIcon.svelte  SolarSystemIcon.svelte  StrikeOverlayIcon.svelte  SyncIcon.svelte  (+4 more)
client/src/lib/: api.js  auth.js  customObjects.js  datasync.js  db.js  deepSkyQuizPool.js  devConsoleLog.js  horizon.js  listDifficulty.js  lists.js  mobileFullscreen.js  moonMap.js  moonQuizPools.js  quizFramework.js  search.js  skymath.js  skymath.test.js  sync.js  visualRangePlan.js
client/src/screens/: ConstellationIdQuizScreen.svelte  ConstellationQuizScreen.svelte  DeepSkyQuizScreen.svelte  FindingPathsListScreen.svelte  FindingPathsScreen.svelte  ListsScreen.svelte  LoginScreen.svelte  MainScreen.svelte  MoonMapScreen.svelte  MoonQuizScreen.svelte  ObjectDetails.svelte  ObservationsScreen.svelte  StarQuizScreen.svelte  SyncReportScreen.svelte  SyncSetupScreen.svelte  TelescopesScreen.svelte  VisualRangeMeasureScreen.svelte  VisualRangeSetupScreen.svelte  WelcomeScreen.svelte
client/src/stores/: keyboard.js  selectedObject.js  theme.js  ui.js
client/test/lib/: deepSkyQuizPool.test.js  listDifficulty.test.js  mobileFullscreen.test.js  moonMap.test.js  moonQuizPools.test.js  search.test.js  skymath.test.js  visualRangePlan.test.js
data/: SOURCES.md
data_prep/: Makefile  README.md  asteroids.py  config.py  constellations.py  data_upload.py  double_stars.py  double_stars_cli.py  downloader.py  dso.py  gaia.py  images.py  main.py  moon_features.py  notes_stars.csv  pyproject.toml  requirements.txt  star_annotations.py  stars.py  variable_stars.py
data_prep/scripts/: render_moon.py  summary_outputs.py  validate_image_sources.py
data_prep/sources/: image_sources.json  moon_features.csv  notes_dso.csv  planets.json
data_prep/tests/: test_asteroids.py  test_constellations.py  test_double_stars.py  test_dso.py  test_gaia.py  test_moon_features.py  test_orb6_periods.py  test_stars.py  test_variable_stars.py
infra/: main.tf
python_lib/storage/: backend.py
server/: .env  Makefile  handler.py  local_server.py  pyproject.toml  requirements.txt
server/tests/: test_handler.py  test_observations.py  test_storage_backend.py  test_sync_merge.py
