[project]
name = "observarium-server"
version = "0.1.0"
description = "AWS Lambda backend for Observarium"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "PyJWT>=2.9.0",
    "cryptography>=43.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "PIE", "PYI", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "PD", "PL", "NPY", "RUF"]
ignore = [
    "PLR0911",  # Too many return statements - OK for routers
    "ARG001",   # Unused function argument - Lambda requires context param
]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-return-statements",  # OK for routers
    "broad-exception-caught",      # OK for generic error handlers
    "invalid-name",                # BaseHTTPRequestHandler requires do_GET etc
    "arguments-differ",            # False positive on log_message override
    "import-error",
]
