[project]
name = "observarium-server"
version = "0.1.0"
description = "AWS Lambda backend for Observarium"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "PyJWT>=2.9.0",
    "cryptography>=43.0.0",
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "pylint>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "PIE", "PYI", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "PD", "PL", "NPY", "RUF"]
ignore = [
    "PLR0911",  # Too many return statements - OK for routers
    "PLR0912",  # Too many branches - router function is expected to be large
    "ARG001",   # Unused function argument - Lambda requires context param
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "N803",    # boto3 uses TitleCase param names in mock stubs
    "ARG002",  # stub methods don't use all interface args
    "ARG004",  # static method stubs accept *args/**kwargs
    "ARG005",  # lambda stubs accept required-but-unused args
    "PLR2004", # HTTP status code literals in assertions
    "PLR0402", # import-as alias is cleaner in test monkeypatching
    "PLW0108", # lambda: Foo() is idiomatic in monkeypatch.setattr calls
    "PLC0415", # in-function imports used for monkeypatching
]

[tool.pylint.imports]
known-third-party = ["boto3", "botocore", "jwt"]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-return-statements",  # OK for routers
    "broad-exception-caught",      # OK for generic error handlers
    "invalid-name",                # BaseHTTPRequestHandler requires do_GET etc
    "arguments-differ",            # False positive on log_message override
    "import-error",
]
